# controller/CategoryController.js
@@ -56,8 +56,29 @@ const deleteCategory = async (req,res) => {
               res.status(501).send("Invalid")
        }
 }
+const updateCategory = async (req,res) => {
+       try {
+              await prisma.$connect;
+              const updateCategory = await prisma.category.update({
+                     where:{
+                            uniq_id:req.body.uniq_id
+                     },
+                     data:{
+                            name_az:req.body.name_az,
+                            name_en:req.body.name_en,
+                            name_ru:req.body.name_ru,
+                            slug:req.body.slug
+                     }
+              })
+              res.status(200).send("Success")
+       }catch(e){
+              console.log(e);
+              res.status(500).send("Invalid")
+       }
+}
 module.exports = {
        getCategories,
        createNewCategory,
-       deleteCategory
+       deleteCategory,
+       updateCategory
 }
