# controller/SubCategoryController.js
@@ -73,9 +73,30 @@ const deleteSubCategory = async (req,res) => {
               res.status(500).send("Invalid")
        }
 }
+const updateSubCat = async (req,res) =>{ 
+       try {
+              await prisma.$connect;
+              const updated = await prisma.subcategory.update({
+                     where:{
+                            uniq_id:req.body.uniq_id
+                     },
+                     data: {
+                            name_az:req.body.name_az,
+                            name_en:req.body.name_en,
+                            name_ru:req.body.name_ru,
+                            slug:req.body.slug
+                     }
+              })
+              res.status(200).send("Success")
+       } catch(e){
+              console.log(e);
+              res.status(500).send("Invalid")
+       }
+}
 module.exports = {
        getSubCats,
        getSubCatsByCatID,
        createNewSubCat,
-       deleteSubCategory
+       deleteSubCategory,
+       updateSubCat
 }
