# routes/admin_route.js
@@ -8,6 +8,7 @@ const bannerAPI = require('../controller/BannerController');
 const contactAPI = require('../controller/ContactController');
 const upload = require('../middlewares/file_upload');
 const bodyParser = require('body-parser');
+const checkOutAPI  = require('../controller/CheckOutController');
 var parseForm = bodyParser.urlencoded({ extended: true });
 module.exports= (app) => {
        app.post('/api/admin/createNewCategory',categoryAPI.createNewCategory)
@@ -35,9 +36,16 @@ module.exports= (app) => {
               next()
        },bannerAPI.createNewBanner)
        app.get('/api/admin/get/contacUs',contactAPI.getContact)
+       app.get('/api/admin/get/checkout',checkOutAPI.getCheckout)
        app.post('/api/admin/create/aboutUs',aboutUs.createAbout)
        app.delete('/api/admin/delete/category',categoryAPI.deleteCategory);
        app.delete('/api/admin/delete/subcategory',subCatAPI.deleteSubCategory);
        app.delete('/api/admin/delete/altcategory',altCategoryAPI.deleteAltCategory);
        app.delete('/api/admin/delete/products',productAPI.deleteProduct);
+       app.delete('/api/admin/delete/banner',bannerAPI.deleteBanner)
+       app.delete('/api/admin/delete/slider',sliderAPI.deleteSlider)
+       app.put('/api/admin/update/aboutus',aboutUs.updateAbout)
+       app.put('/api/admin/update/altcategory',altCategoryAPI.updateAltCategory)
+       app.put('/api/admin/update/category',categoryAPI.updateCategory)
+       app.put('/api/admin/update/subcategory',subCatAPI.updateSubCat)
 }
